Fix alignment of nav menu caret icons

--- a/media/css/cms/flare26-navigation.css
+++ b/media/css/cms/flare26-navigation.css
@@ -177,10 +177,10 @@
 }
 
 .fl-menu-category .fl-icon-chevron-down {
+    margin-block-end: var(--token-spacing-xs);
     transform: scale(0.8);
     transform-origin: center;
     transition: transform 0.1s ease;
-    vertical-align: bottom;
 }
 
 .fl-menu-category.is-active .fl-icon-chevron-down {
